# NstudioCity

ParticleEngine/: CMakeLists.txt  auto_build.bat
ParticleEngine/src/: main.cpp
blindado/: icon.svg.import  project.godot
blindado/ANIMACIONES/: AGACHADO.fbx  AGACHADO.fbx.import  AGACHADO_A.res  CAERDELCIELO.fbx  CAERDELCIELO.fbx.import  CAERDELCIELO_A.res  CAIDADURAMUCHAO_A.res  CAMINAR.fbx  CAMINAR.fbx.import  CAMINARAGACHADO.fbx  CAMINARAGACHADO.fbx.import  CAMINARAGACHADO_A.res  CAMINARCONAIM.fbx  CAMINARCONAIM.fbx.import  CAMINARCONAIM_A.res  CAMINAR_A.res  CURACIONBEBIENDOALGO.fbx  CURACIONBEBIENDOALGO.fbx.import  CURACIONBEBIENDOALGO_A.res  EQUIPARYDESAQUIPAR.fbx  EQUIPARYDESAQUIPAR.fbx.import  EQUIPARYDESAQUIPAR_A.res  FIREAGACHADO.fbx  FIREAGACHADO.fbx.import  FIREAGACHADO_A.res  FIREIDLE.fbx  FIREIDLE.fbx.import  FIREIDLE_A.res  GUARDARARMAPISTOLA_A.res  GUARDARARMAPISTOLITA.fbx  GUARDARARMAPISTOLITA.fbx.import  HERIDO.fbx  HERIDO.fbx.import  HERIDOIDLE.fbx  HERIDOIDLE.fbx.import  HERIDOIDLE_A.res  HERIDO_A.res  IDLE.fbx  IDLE.fbx.import  IDLEAIMAGACHADO.fbx  (+50 more)
blindado/AUDIO/: Helicopter engine shutdown on ground - Sound Effects - Royalty Free.mp3.import
blindado/ESCENAS/: MUNDO.tscn  Player.tscn  avion.tscn  mapa.tscn  node_3d.tscn
blindado/IMAGENES/: RULETA.png.import  SISEÑOR.PNG.import  mapa_color_rocajpg.jpg.import  mapa_color_tierra.jpg.import
blindado/MODELOS/: AVION.fbx  AVION.fbx.import  MODELO3D.fbx.import  MODELO3D_0.png.import  MODELO3D_1.png.import  MODELO3D_2.png.import  mapa.fbx  mapa.fbx.import  mapa.glb  mapa.glb.import
(+22 files in other folders)
